# goober

./: Cargo.toml  README.md
archs/: Cargo.toml
archs/src/: lib.rs
goober/: Cargo.toml
goober-core/: Cargo.toml
goober-core/src/: activation.rs  lib.rs  matrix.rs  subnet.rs  vector.rs
goober-derive/: Cargo.toml
goober-derive/src/: lib.rs
goober-layer/: Cargo.toml
goober-layer/src/: add.rs  conv1d.rs  dense.rs  lib.rs  sparse.rs
goober/src/: activation.rs  layer.rs  lib.rs  matrix.rs  vector.rs
goober/src/layer/: dense.rs  sparse.rs
src/: lib.rs
tests/: add.rs  connected.rs
